[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/SmoothScroll/SmoothScroll.gd" type="Script" id=1]
[ext_resource path="res://addons/SmoothScroll/scroll_track.png" type="Texture" id=2]
[ext_resource path="res://addons/SmoothScroll/scroll_thumb.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 13.0878, 1.62622 )

[node name="SmoothScroll" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 1 )

[node name="ScrollTrack" type="NinePatchRect" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
mouse_filter = 1
texture = ExtResource( 2 )
patch_margin_top = 25
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollThumb" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.988
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.279907
margin_bottom = -550.0
mouse_filter = 1
mouse_default_cursor_shape = 6
texture = ExtResource( 3 )
patch_margin_top = 25
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollArea" type="Area2D" parent="."]

[node name="ScrollShape" type="CollisionShape2D" parent="ScrollArea"]
position = Vector2( 718.849, 638.595 )
shape = SubResource( 1 )

[connection signal="gui_input" from="ScrollThumb" to="." method="_on_ScrollThumb_gui_input"]
[connection signal="input_event" from="ScrollArea" to="." method="_on_Area2D_input_event"]
